@@ -580,6 +580,29 @@ latex( tabular( Justify(r)*(F+1) ~ Justify(c)*(n=1)
 @
 \end{center}
 
+\subsubsection{\code{Percent()}}
+
+The \code{Percent()} pseudo-function is used to specify a statistic that depends on other values in the table.  It has two optional arguments:
+\begin{description}
+\item[\code{denom="all"}]  This specifies how the denominator (argument \code{y} to \code{fn} below) is set.  Possible values are \code{"all"}, meaning all values
+are used, \code{"row"}, meaning only the values in the current row are used, \code{"col"}, meaning only the values in the current column
+are used.  If a logical vector is given, it is used to select which values form the denominator.  Anything else is just passed to \code{fn}
+as given.
+\item[\code{fn=percent}]  This is the function which actually does the computation.  The default definition is \code{function(x, y) 100*length(x)/length(y)},
+giving the percentage count, but any other two argument function could be used.
+\end{description}
+
+Example:
+\begin{center}
+<<results=tex>>=
+latex( tabular( (Factor(gear, "Gears") + 1)
+          *((n=1) + Percent() 
+            + (RowPct=Percent("row")) + (ColPct=Percent("col"))) 
+         ~ (Factor(carb, "Carburetors") + 1)
+          *Format(digits=1), data=mtcars ) )
+@
+\end{center}
+
 \subsection{Formula Functions}
 \label{sec:tableformulas}
 
