@@ -43,5 +43,6 @@
       recycled.
       Missing values were not handled correctly when computing counts,
       and when working with factors.  (Reported by Manuel Reif.)
+      Added Percent() pseudo-function. 
       
       
